--- a/modules/trustedshops/mails/de/rating_email.html
+++ b/modules/trustedshops/mails/de/rating_email.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Are you satisfied with {shop_name}? Please write a review!</title>
+	<title>Waren Sie mit Ihrem Kauf bei {shop_name} zufrieden? Bitte bewerten Sie uns!</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
@@ -11,7 +11,7 @@
 <td align="left"><a title="{shop_name}" href="{shop_url}"><img style="border: none;" src="{shop_logo}" alt="{shop_name}" /></a></td>
 </tr>
 <tr>
-<td align="left">Thanks for having purchased at {shop_name}. Were you satisfied with our service? Please write a review and rate us. <br /><br /><a href="{rating_url}"><img src="{button_url}/apply_en.gif" border="0" alt="Write a review" /></a></td>
+<td align="left">Danke, dass Sie bei {shop_name} eingekauft haben. Waren Sie mit Ihrem Einkauf und unserem Service zufrieden? Hier können Sie {shop_name} bewerten, wir freuen uns auf Ihr Feedback.
 </tr>
 <tr>
 <td>&nbsp;</td>
@@ -23,3 +23,4 @@
 </table>
 </body>
 </html>
+
