--- a/mails/it/guest_to_customer.html
+++ b/mails/it/guest_to_customer.html
@@ -14,25 +14,25 @@
 <td></td>
 </tr>
 <tr>
-<td align="left">Hi <strong style="color: #db3484;">{firstname} {lastname}</strong>,</td>
+<td align="left">Salve&nbsp;<strong style="color: #db3484;">{firstname} {lastname}</strong>,</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Your guest account has been transformed into a customer account</td>
+<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Il tuo account ospite &egrave; stato trasformato in account cliente</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left"><strong>E-mail address:</strong> {email}<br /> <strong>Password:</strong> {passwd}</td>
+<td align="left"><strong>Indirizzo e-mail:</strong> {email}<br /> <strong>Password:</strong> {passwd}</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">Please be careful when sharing these login details with others. 				<br /><br /> You can access at your account on our Website: {shop_url}</td>
+<td align="left">Fai attenzione a non condividere con altri i tuoi dati di login. 				<br /><br />Puoi accedere al tuo account nel nostro sito web: {shop_url}</td>
 </tr>
 <tr>
 <td></td>
