--- a/modules/followup/mails/it/followup_2.html
+++ b/modules/followup/mails/it/followup_2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Message from {shop_name}</title>
+	<title>Messaggio da {shop_name}</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
@@ -14,25 +14,25 @@
 <td></td>
 </tr>
 <tr>
-<td align="left">Hi <strong style="color: #db3484;">{firstname} {lastname}</strong>,</td>
+<td align="left">Salve&nbsp;<strong style="color: #db3484;">{firstname} {lastname}</strong>,</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Thank you for your order at {shop_name}</td>
+<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Grazie del tuo ordine su {shop_name}</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">By way of saying thanks, we want to give you a discount of {amount}% off your next order! This offer is valid for {days} days, so do not waste a moment!<br /><br /></td>
+<td align="left">Per ringraziarti, vogliamo offrirti uno sconto del {amount}% sul tuo prossimo ordine! Questa offerta &egrave; valida per {days} giorni, quindi approfittane subito!<br /><br /></td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">Here is your coupon: <strong>{voucher_num}</strong><br /><br /> Enter this code in your shopping cart to get your discount.</td>
+<td align="left">Ecco il tuo buono: <strong>{voucher_num}</strong><br /><br />Inserisci questo codice nel tuo carrello per ottenere lo sconto.</td>
 </tr>
 <tr>
 <td></td>
