--- a/modules/sendtoafriend/mails/it/send_to_a_friend.html
+++ b/modules/sendtoafriend/mails/it/send_to_a_friend.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Message from {shop_name}</title>
+	<title>Messaggio da {shop_name}</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
@@ -14,19 +14,19 @@
 <td></td>
 </tr>
 <tr>
-<td align="left">Hi <strong style="color: #db3484;">{name}</strong>,</td>
+<td align="left">Salve&nbsp;<strong style="color: #db3484;">{name}</strong>,</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">{customer} has sent you a link to a product that (s)he thinks may interest you.</td>
+<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">{customer} ti ha inviato un link per un prodotto che potrebbe interessarti.</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">Click here to view this item: <a href="{product_link}">{product}</a></td>
+<td align="left">Clicca qui per vedere questo articolo: <a href="{product_link}">{product}</a></td>
 </tr>
 <tr>
 <td></td>
