--- a/mails/it/account.html
+++ b/mails/it/account.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Message from {shop_name}</title>
+	<title>Messaggio da {shop_name}</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
@@ -14,31 +14,31 @@
 <td></td>
 </tr>
 <tr>
-<td align="left">Hi <strong style="color: #db3484;">{firstname} {lastname}</strong>,</td>
+<td align="left">Salve&nbsp;<strong style="color: #db3484;">{firstname} {lastname}</strong>,</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Your account login details</td>
+<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">I tuoi dati di login dell&#039;account</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">E-mail address: <strong><span style="color: #db3484;">{email}</span></strong> <br />Password: <strong>{passwd}</strong></td>
+<td align="left">Indirizzo e-mail: <strong><span style="color: #db3484;">{email}</span></strong> <br />Password: <strong>{passwd}</strong></td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left"><strong>Safety tips:</strong> <br /><br />Keep your account details safe. 				<br />Do not disclose your login details to anyone. 				<br />Change your password regularly. 				<br />Should you suspect someone is using your account illegally, please notify us immediately.</td>
+<td align="left"><strong>Consigli di sicurezza:</strong> <br /><br />Tieni al sicuro i dati del tuo account. 				<br />Non far sapere a nessuno i tuoi dati di login. 				<br />Cambia regolarmente la tua password. 				<br />Se sospetti che qualcuno stia utilizzando illegalmente il tuoaccount, avvertici immediatamente.</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">You can now place orders on our Website: <a href="{shop_url}">{shop_name}</a>.</td>
+<td align="left">Adesso puoi effettuare ordini nel nostro sito web: <a href="{shop_url}">{shop_name}</a>.</td>
 </tr>
 <tr>
 <td></td>
