--- a/mails/it/cheque.html
+++ b/mails/it/cheque.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Message from {shop_name}</title>
+	<title>Messaggio da {shop_name}</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
@@ -14,34 +14,34 @@
 <td></td>
 </tr>
 <tr>
-<td align="left">Hi <strong style="color: #db3484;">{firstname} {lastname}</strong>,</td>
+<td align="left">Salve&nbsp;<strong style="color: #db3484;">{firstname} {lastname}</strong>,</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Your order {order_name} history</td>
+<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">La cronologia del tuo ordine {order_name}</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">Your order has been placed successfully, and will be shipped as soon as payment is received.</td>
+<td align="left">Il tuo ordine &egrave; stato eseguito con successo, e sar&agrave; inviato appena ricevuto il pagamento.</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">Please note that you have selected to pay by cheque. Please send your cheque: 				<br /><br /> - an amount of <strong>{total_paid}</strong> <br /><br /> - payable to the order of <strong>{cheque_name}</strong> <br /><br /> - mail to <strong>{cheque_address_html}</strong></td>
+<td align="left">Ricorda che hai scelto di pagare con assegno. Invia il pagamento: 				<br /><br /> - dell&#039;importo di&nbsp;<strong>{total_paid}</strong> <br /><br /> - pagabile all&#039;ordine di&nbsp;<strong>{cheque_name}</strong> <br /><br /> - inviato a&nbsp;<strong>{cheque_address_html}</strong></td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">You can review this order and download your invoice from the <a style="color: #db3484; font-weight: bold; text-decoration: none;" href="{shop_url}history.php">"Order history"</a> section of your account by clicking <a style="color: #db3484; font-weight: bold; text-decoration: none;" href="{shop_url}my-account.php">"My account"</a> on our Website.</td>
+<td align="left">Puoi rivedere l&#039;ordine e scaricare la fattura dalla sezione<a style="color: #db3484; font-weight: bold; text-decoration: none;" href="{shop_url}history.php">"Cronologia ordine"</a> del tuo account cliccando su <a style="color: #db3484; font-weight: bold; text-decoration: none;" href="{shop_url}my-account.php">"Il mio account"</a> nel nostro sito web.</td>
 </tr>
 <tr>
-<td align="left">If you have guest account, you can follow your order at <a style="color: #db3484; font-weight: bold; text-decoration: none;" href="{shop_url}guest-tracking.php">"Guest Tracking"</a> section on our Website.</td>
+<td align="left">Se hai un account ospite, puoi seguire il tuo ordine nella sezione&nbsp;<a style="color: #db3484; font-weight: bold; text-decoration: none;" href="{shop_url}guest-tracking.php">"Controllo ordine ospite"</a> del nostro sito web.</td>
 </tr>
 <tr>
 <td></td>
