--- a/mails/it/contact.html
+++ b/mails/it/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Message from {shop_name}</title>
+	<title>Messaggio da {shop_name}</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
@@ -14,13 +14,13 @@
 <td></td>
 </tr>
 <tr>
-<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Message from your shop {shop_name}</td>
+<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Messaggio dal tuo negozio {shop_name}</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">E-mail address: <a href="mailto:{email}"><strong>{email}</strong></a> <br /><br /> Message: {message}</td>
+<td align="left">Indirizzo e-mail: <a href="mailto:{email}"><strong>{email}</strong></a> <br /><br /> Messaggio: {message}</td>
 </tr>
 <tr>
 <td></td>
