--- a/mails/it/contact_form.html
+++ b/mails/it/contact_form.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Message from {shop_name}</title>
+	<title>Messaggio da {shop_name}</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
@@ -14,19 +14,19 @@
 <td></td>
 </tr>
 <tr>
-<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Your message has been correctly sent to our Customer Service.</td>
+<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Il tuo messaggio &egrave; stato correttamente inviato al nostro Servizio Clienti.</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">Your message: {message}</td>
+<td align="left">Il tuo messaggio: {message}</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">We will answer as soon as possible.</td>
+<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Risponderemo quanto prima.</td>
 </tr>
 <tr>
 <td></td>
