--- a/mails/it/download_product.html
+++ b/mails/it/download_product.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Message from {shop_name}</title>
+	<title>Messaggio da {shop_name}</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
@@ -14,34 +14,34 @@
 <td></td>
 </tr>
 <tr>
-<td align="left">Hello <strong style="color: #db3484;">{firstname} {lastname}</strong>, thank you for shopping with <strong>{shop_name}</strong>.</td>
+<td align="left">Salve&nbsp;<strong style="color: #db3484;">{firstname} {lastname}</strong>, grazie di aver acquistato con&nbsp;<strong>{shop_name}</strong>.</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Product(s) to download</td>
+<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Prodotto/i da scaricare</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">You have {nbProducts} product(s) to download.</td>
+<td align="left">Hai {nbProducts} prodotto/i da scaricare.</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">Below are direct links to these products: 				{virtualProducts}</td>
+<td align="left">Qui di seguito trovarai i link per questi prodotti: 				{virtualProducts}</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">You can review this order and download your invoice from the <a style="color: #db3484; font-weight: bold; text-decoration: none;" href="{shop_url}history.php">"Order history"</a> section of your account by clicking <a style="color: #db3484; font-weight: bold; text-decoration: none;" href="{shop_url}my-account.php">"My account"</a> on our Website.</td>
+<td align="left">Puoi rivedere questo ordine e scaricare la fattura dalla sezione&nbsp;<a style="color: #db3484; font-weight: bold; text-decoration: none;" href="{shop_url}history.php">"Cronologia ordine"</a> del tuo account cliccando su&nbsp;<a style="color: #db3484; font-weight: bold; text-decoration: none;" href="{shop_url}my-account.php">"Il mio account"</a> nel nostro sito web.</td>
 </tr>
 <tr>
-<td align="left">If you have a guest account, you can follow your order at <a style="color: #db3484; font-weight: bold; text-decoration: none;" href="{shop_url}guest-tracking.php">"Guest Tracking"</a> section on our Website.</td>
+<td align="left">Se hai un account ospite, puoi seguire il tuo ordine nella sezione&nbsp;<a style="color: #db3484; font-weight: bold; text-decoration: none;" href="{shop_url}guest-tracking.php">"Controllo ordini ospite"</a>del nostro sito web.</td>
 </tr>
 <tr>
 <td></td>
