--- a/mails/it/employee_password.html
+++ b/mails/it/employee_password.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Message from {shop_name}</title>
+	<title>Messaggio da {shop_name}</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
@@ -14,19 +14,19 @@
 <td></td>
 </tr>
 <tr>
-<td align="left">Hi <strong style="color: #db3484;">{firstname} {lastname}</strong>,</td>
+<td align="left">Salve&nbsp;<strong style="color: #db3484;">{firstname} {lastname}</strong>,</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Your personal login information</td>
+<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">I tuoi dati personali di login</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left"><strong>First name</strong>: {firstname}<br /> <strong>Last name</strong>: {lastname}<br /> <strong>Password</strong>: {passwd}<br /> <strong>E-mail address</strong>: {email}</td>
+<td align="left"><strong>Nome</strong>: {firstname}<br /> <strong>Cognome</strong>: {lastname}<br /> <strong>Password</strong>: {passwd}<br /> <strong>Indirizzo e-mail</strong>: {email}</td>
 </tr>
 <tr>
 <td></td>
