--- a/mails/it/forward_msg.html
+++ b/mails/it/forward_msg.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Message from {shop_name}</title>
+	<title>Messaggio da {shop_name}</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
 <tbody>
 <tr>
-<td style="border: 1px solid #CCCCCC; background-color: #ffffff; padding: 10px; color: #383838; font-size: 12px;">{employee} wanted to forward this chat to you. 				<br /><br /> {messages} 				<br /><br /> {employee} added "{comment}".</td>
+<td style="border: 1px solid #CCCCCC; background-color: #ffffff; padding: 10px; color: #383838; font-size: 12px;">{employee} desidera inviarti questa chat. 				<br /><br /> {messages} 				<br /><br /> {employee} ha aggiunto "{comment}".</td>
 </tr>
 </tbody>
 </table>
