--- a/mails/it/log_alert.html
+++ b/mails/it/log_alert.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Message from {shop_name}</title>
+	<title>Messaggio da {shop_name}</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
@@ -14,25 +14,25 @@
 <td></td>
 </tr>
 <tr>
-<td align="left">Hi,</td>
+<td align="left">Salve,</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">New log alert</td>
+<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Nuovo messaggio di avviso</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left"><strong>Unfortunately, new log alert message has been saved.</strong></td>
+<td align="left"><strong>Purtroppo &egrave; stato registrato un nuovo messaggio di avviso.</strong></td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">You can check this on your Back office &gt; Tools &gt; Log on our Website.</td>
+<td align="left">Puoi controllarlo nel tuo Back office &gt; Strumenti&gt; Log del nostro sito.</td>
 </tr>
 <tr>
 <td></td>
