--- a/mails/it/order_conf.html
+++ b/mails/it/order_conf.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Message from {shop_name}</title>
+	<title>Messaggio da {shop_name}</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
@@ -14,55 +14,55 @@
 <td></td>
 </tr>
 <tr>
-<td align="left">Hello <strong style="color: #db3484;">{firstname} {lastname}</strong>, thank you for shopping with <strong>{shop_name}</strong>.</td>
+<td align="left">Salve&nbsp;<strong style="color: #db3484;">{firstname} {lastname}</strong>, grazie di aver acquistato con&nbsp;<strong>{shop_name}</strong>.</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Order details</td>
+<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Dati dell&#039;ordine</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">Order: <strong><span style="color: #db3484;">{order_name}</span> placed on {date}</strong> <br />Payment: <strong>{payment}</strong></td>
+<td align="left">Ordine: <strong><span style="color: #db3484;">{order_name}</span> effettuato il {date}</strong> <br />Pagamento: <strong>{payment}</strong></td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">{products} 						{discounts} 					
+<td align="left">{products} 						{discounts} 					                          
 <table style="width: 100%; font-family: Verdana,sans-serif; font-size: 11px; color: #374953;">
 <!-- Title --> 
 <tbody>
 <tr style="background-color: #b9babe; text-align: center;">
-<th style="width: 15%; padding: 0.6em 0;">Reference</th> <th style="width: 35%; padding: 0.6em 0;">Product</th> <th style="width: 15%; padding: 0.6em 0;">Unit price</th> <th style="width: 15%; padding: 0.6em 0;">Quantity</th> <th style="width: 20%; padding: 0.6em 0;">Total price</th>
+<th style="width: 15%; padding: 0.6em 0;">Riferimento</th> <th style="width: 35%; padding: 0.6em 0;">Prodotto</th> <th style="width: 15%; padding: 0.6em 0;">Prezzo unitario</th> <th style="width: 15%; padding: 0.6em 0;">Quantit&agrave;</th> <th style="width: 20%; padding: 0.6em 0;">Prezzo totale</th>
 </tr>
 <!-- Products --><!-- Footer: prices --> 
 <tr style="text-align: right;">
 <td></td>
-<td style="background-color: #b9babe; padding: 0.6em 0.4em;" colspan="3">Products</td>
+<td style="background-color: #b9babe; padding: 0.6em 0.4em;" colspan="3">Prodotti</td>
 <td style="background-color: #b9babe; padding: 0.6em 0.4em;">{total_products}</td>
 </tr>
 <tr style="text-align: right;">
 <td></td>
-<td style="background-color: #ebecee; padding: 0.6em 0.4em;" colspan="3">Discounts</td>
+<td style="background-color: #ebecee; padding: 0.6em 0.4em;" colspan="3">Sconti</td>
 <td style="background-color: #ebecee; padding: 0.6em 0.4em;">{total_discounts}</td>
 </tr>
 <tr style="text-align: right;">
 <td></td>
-<td style="background-color: #ebecee; padding: 0.6em 0.4em;" colspan="3">Gift-wrapping</td>
+<td style="background-color: #ebecee; padding: 0.6em 0.4em;" colspan="3">Carta regalo</td>
 <td style="background-color: #ebecee; padding: 0.6em 0.4em;">{total_wrapping}</td>
 </tr>
 <tr style="text-align: right;">
 <td></td>
-<td style="background-color: #dde2e6; padding: 0.6em 0.4em;" colspan="3">Shipping</td>
+<td style="background-color: #dde2e6; padding: 0.6em 0.4em;" colspan="3">Spedizione</td>
 <td style="background-color: #dde2e6; padding: 0.6em 0.4em;">{total_shipping}</td>
 </tr>
 <tr style="text-align: right; font-weight: bold;">
 <td></td>
-<td style="background-color: #f1aecf; padding: 0.6em 0.4em;" colspan="3">Total paid</td>
+<td style="background-color: #f1aecf; padding: 0.6em 0.4em;" colspan="3">Totale pagato</td>
 <td style="background-color: #f1aecf; padding: 0.6em 0.4em;">{total_paid}</td>
 </tr>
 </tbody>
@@ -73,13 +73,13 @@
 <td></td>
 </tr>
 <tr>
-<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Shipping</td>
+<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Spedizione</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">Carrier: <strong>{carrier}</strong></td>
+<td align="left">Mezzo di spedizione:&nbsp;<strong>{carrier}</strong></td>
 </tr>
 <tr>
 <td></td>
@@ -89,7 +89,7 @@
 <table style="width: 100%; font-family: Verdana,sans-serif; font-size: 11px; color: #374953;">
 <tbody>
 <tr style="background-color: #b9babe; text-transform: uppercase;">
-<th style="text-align: left; padding: 0.3em 1em;">Delivery address</th> <th style="text-align: left; padding: 0.3em 1em;">Billing address</th>
+<th style="text-align: left; padding: 0.3em 1em;">INDIRIZZO DI CONSEGNA</th> <th style="text-align: left; padding: 0.3em 1em;">INDIRIZZO DI FATTURAZIONE</th>
 </tr>
 <tr>
 <td style="padding: 0.5em 0 0.5em 0.5em; background-color: #ebecee;">{delivery_company} 							<br /><span style="color: #db3484; font-weight: bold;">{delivery_firstname} {delivery_lastname}</span> <br />{delivery_address1} 							<br />{delivery_address2} 							<br />{delivery_city} {delivery_postal_code} 							<br />{delivery_country} {delivery_state} 							<br />{delivery_phone} 							<br />{delivery_other}</td>
@@ -103,10 +103,10 @@
 <td></td>
 </tr>
 <tr>
-<td align="left">You can review this order and download your invoice from the <a style="color: #db3484; font-weight: bold; text-decoration: none;" href="{shop_url}history.php">"Order history"</a> section of your account by clicking <a style="color: #db3484; font-weight: bold; text-decoration: none;" href="{shop_url}my-account.php">"My account"</a> on our Website.</td>
+<td align="left">Puoi rivedere l&#039;ordine e scaricare la fattura dalla sezione&nbsp;<a style="color: #db3484; font-weight: bold; text-decoration: none;" href="{shop_url}history.php">"Cronologia ordine"</a> del tuo account cliccando su&nbsp;<a style="color: #db3484; font-weight: bold; text-decoration: none;" href="{shop_url}my-account.php">"Il mio account"</a> nel nostro sito web.</td>
 </tr>
 <tr>
-<td align="left">If you have a guest account, you can follow your order at <a style="color: #db3484; font-weight: bold; text-decoration: none;" href="{shop_url}guest-tracking.php">"Guest Tracking"</a> section on our Website.</td>
+<td align="left">Se hai un account ospite, puoi seguire il tuo ordine nella sezione&nbsp;<a style="color: #db3484; font-weight: bold; text-decoration: none;" href="{shop_url}guest-tracking.php">"Controllo ordini ospite"</a> del nostro sito web.</td>
 </tr>
 <tr>
 <td></td>
