--- a/mails/it/order_customer_comment.html
+++ b/mails/it/order_customer_comment.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Message from a client from {shop_name}</title>
+	<title>Messaggio da un cliente da {shop_name}</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
@@ -20,13 +20,13 @@
 <td></td>
 </tr>
 <tr>
-<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Message from {firstname} {lastname} ({email})</td>
+<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Messaggio da {firstname} {lastname} ({email})</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left"><strong>You have received a new message regarding order #{id_order}:</strong> <br /><br /> {message}</td>
+<td align="left"><strong>Hai ricevuto un nuovo messaggio riguardo all&#039;ordine n.{id_order}:</strong> <br /><br /> {message}</td>
 </tr>
 <tr>
 <td></td>
