--- a/mails/it/password_query.html
+++ b/mails/it/password_query.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Message from {shop_name}</title>
+	<title>Messaggio da {shop_name}</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
@@ -14,19 +14,19 @@
 <td></td>
 </tr>
 <tr>
-<td align="left">Hello <strong style="color: #db3484;">{firstname} {lastname}</strong>,</td>
+<td align="left">Salve&nbsp;<strong style="color: #db3484;">{firstname} {lastname}</strong>,</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">You asked to get back your {shop_name} access codes,<br /> Note that this action will change your current password.</td>
+<td align="left">Hai chiesto di restituire i tuoi codici di accesso di {shop_name},<br /> Nota che questo far&agrave; cambiare la tua password attuale.</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">If you really want to do it, click the following link :<br /> <a href="{url}">{url}</a></td>
+<td align="left">Se davvero vuoi farlo, clicca nel link seguente:<br /> <a href="{url}">{url}</a></td>
 </tr>
 <tr>
 <td></td>
