--- a/mails/it/payment.html
+++ b/mails/it/payment.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Message from {shop_name}</title>
+	<title>Messaggio da {shop_name}</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
@@ -14,25 +14,25 @@
 <td></td>
 </tr>
 <tr>
-<td align="left">Hi <strong style="color: #db3484;">{firstname} {lastname}</strong>,</td>
+<td align="left">Salve&nbsp;<strong style="color: #db3484;">{firstname} {lastname}</strong>,</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Your order #{id_order} history</td>
+<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">La cronologia del tuo ordine n.{id_order}</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left"><strong>Payment for your order was successfully processed.</strong></td>
+<td align="left"><strong>Il pagamento per il tuo ordine &egrave; stato elaborato.</strong></td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">You can review this order and download your invoice from the <a style="color: #db3484; font-weight: bold; text-decoration: none;" href="{shop_url}history.php">"Order history"</a> section of your account by clicking <a style="color: #db3484; font-weight: bold; text-decoration: none;" href="{shop_url}my-account.php">"My account"</a> on our Website.</td>
+<td align="left">Puoi rivedere questo ordine e scaricare la fattura dalla sezione&nbsp;<a style="color: #db3484; font-weight: bold; text-decoration: none;" href="{shop_url}history.php">"Cronologia ordine"</a> del tuo account cliccando su&nbsp;<a style="color: #db3484; font-weight: bold; text-decoration: none;" href="{shop_url}my-account.php">"Il mio account"</a> nel nostro sito web.</td>
 </tr>
 <tr>
 <td></td>
