--- a/mails/it/reply_msg.html
+++ b/mails/it/reply_msg.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Message from {shop_name}</title>
+	<title>Messaggio da {shop_name}</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
 <tbody>
 <tr>
-<td style="border: 1px solid #CCCCCC; background-color: #ffffff; padding: 10px; color: #383838; font-size: 12px;">{reply}<br /><br /> <span style="color: red; font-weight: bold;">Please do not reply to this message with your e-mail client</span>, we would not receive your message.<br /> In order to reply, please use exclusively the following link: <a href="{link}">{link}</a>.</td>
+<td style="border: 1px solid #CCCCCC; background-color: #ffffff; padding: 10px; color: #383838; font-size: 12px;">{reply}<br /><br /> <span style="color: red; font-weight: bold;">Non rispondere a questo messaggio usando la tua mail cliente</span>, il tuo messaggio non ci arriverebbe.<br />Per rispondere, usa esclusivamente il link seguente: <a href="{link}">{link}</a>.</td>
 </tr>
 </tbody>
 </table>
