--- a/mails/it/test.html
+++ b/mails/it/test.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Test mail</title>
+	<title>Mail di prova</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
 <tbody>
 <tr>
-<td>Hello,<br /><br /> This is a <strong>test mail</strong> from your shop.</td>
+<td>Salve,<br /><br />Questa &egrave; una&nbsp;<strong>mail di prova</strong> da parte del tuo negozio.</td>
 </tr>
 <tr>
 <td></td>
