--- a/mails/it/voucher.html
+++ b/mails/it/voucher.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Message from {shop_name}</title>
+	<title>Messaggio da {shop_name}</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
@@ -14,25 +14,25 @@
 <td></td>
 </tr>
 <tr>
-<td align="left">Hi <strong style="color: #db3484;">{firstname} {lastname}</strong>,</td>
+<td align="left">Salve&nbsp;<strong style="color: #db3484;">{firstname} {lastname}</strong>,</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Your order #{id_order} history</td>
+<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Cronologia del tuo ordine n.{id_order}</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">This is to inform you about the creation of a voucher in your name as a result of your order #{id_order}.</td>
+<td align="left">Vorremmo informarti della creazione di un buono sconto a tuo nome in seguito al tuo ordine n.{id_order}.</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">Here is the code of your voucher : <strong>{voucher_num}</strong>, with an amount of <strong>{voucher_amount}</strong>.<br /> Simply copy/paste this code during the payment process for your next order.</td>
+<td align="left">Ecco il codice del tuo buono:<strong>{voucher_num}</strong>, per l&#039;importo di <strong>{voucher_amount}</strong>.<br />Basta che durante il processo di pagamento del prossimo ordine tu copi/incolli questo codice.</td>
 </tr>
 <tr>
 <td></td>
