--- a/modules/birthdaypresent/mails/it/birthday.html
+++ b/modules/birthdaypresent/mails/it/birthday.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Happy Birthday! from {shop_name}</title>
+	<title>Buon Compleanno! da {shop_name}</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
@@ -14,20 +14,20 @@
 <td></td>
 </tr>
 <tr>
-<td align="left">Hi <strong style="color: #db3484;">{firstname} {lastname}</strong>,</td>
+<td align="left">Salve&nbsp;<strong style="color: #db3484;">{firstname} {lastname}</strong>,</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">{shop_name} wants to wish you a Happy Birthday and offers you a present.</td>
+<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">{shop_name} ti augura Buon Compleanno e vuole farti un regalo.</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
 <td align="left">
-<p>A surprise is waiting for you... log on to your account now to see your discount voucher!<br /> And put it to good use!</p>
+<p>Ti aspetta una sorpresa... collegati subito al tuo account per vedere il tuo buono sconto!<br />E approfittane subito!</p>
 <br /><br /></td>
 </tr>
 <tr>
