--- a/modules/blockwishlist/mails/it/wishlink.html
+++ b/modules/blockwishlist/mails/it/wishlink.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Message from {shop_name}</title>
+	<title>Messaggio da {shop_name}</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
@@ -14,19 +14,19 @@
 <td></td>
 </tr>
 <tr>
-<td align="left">Hi,</td>
+<td align="left">Salve,</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Message from {shop_name}</td>
+<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Messaggio da {shop_name}</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left"><strong>{shop_name} invites you to send this link to your friends, so they can see your wishlist {wishlist} :</strong> <br /><br /> <a title="WishList" href="{message}">{message}</a></td>
+<td align="left"><strong>{shop_name} ti invita ad inviare questo link ai tuoi amici, cos&igrave; che possano vedere la tua lista dei desideri {wishlist}:</strong> <br /><br /> <a title="WishList" href="{message}">{message}</a></td>
 </tr>
 <tr>
 <td></td>
