--- a/modules/blockwishlist/mails/it/wishlist.html
+++ b/modules/blockwishlist/mails/it/wishlist.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Message from a customer of {shop_name}</title>
+	<title>Messaggio da un cliente di {shop_name}</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
@@ -14,19 +14,19 @@
 <td></td>
 </tr>
 <tr>
-<td align="left">Hi,</td>
+<td align="left">Salve,</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Message from {shop_name}</td>
+<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Messaggio da {shop_name}</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left"><strong>{firstname} {lastname} indicated you may want to see his/her wishlist {wishlist} :</strong> <br /><br /> <a title="WishList" href="{message}">{wishlist}</a></td>
+<td align="left"><strong>{firstname} {lastname} ha detto che potresto voler vedere la sua lista dei desideri {wishlist}:</strong> <br /><br /> <a title="WishList" href="{message}">{wishlist}</a></td>
 </tr>
 <tr>
 <td></td>
