--- a/modules/ekomi/mails/it/ekomi.html
+++ b/modules/ekomi/mails/it/ekomi.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title></title>
+	<title>titolo</title>
 </head>
 <body>
 	<p>{firstname} {lastname} {email} {id_order}</p>
