--- a/modules/followup/mails/it/followup_1.html
+++ b/modules/followup/mails/it/followup_1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Message from {shop_name}</title>
+	<title>Messaggio da {shop_name}</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
@@ -14,25 +14,25 @@
 <td></td>
 </tr>
 <tr>
-<td align="left">Hi <strong style="color: #db3484;">{firstname} {lastname}</strong>,</td>
+<td align="left">Salve&nbsp;<strong style="color: #db3484;">{firstname} {lastname}</strong>,</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Your cart at {shop_name}</td>
+<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Il tuo carrello su {shop_name}</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">We noticed that during your last visit on {shop_name}, you did not validate the order you had started.<br /><br /> Your cart has been saved, you can resume your order by visiting our shop:<br /><br /> <a title="{shop_name}" href="{shop_url}">{shop_url}</a><br /><br /> As an incentive, we can give you a discount of {amount}% off your next order! This offer is valid for {days} days, so do not waste a moment!</td>
+<td align="left">Abbiamo notato che durante la tua ultima visita a {shop_name}, non hai convalidato un ordine che avevi iniziato.<br /><br />Il tuo carrello &egrave; stato salvato, puoi riprendere l&#039;ordine visitando il nostro negozio:<br /><br /> <a title="{shop_name}" href="{shop_url}">{shop_url}</a><br /><br />Come incentivo, possiamo offrirti uno sconto del {amount}% sul tuo prossimo ordine! Questa offerta &egrave; valida per {days} giorni, quindi approfittane subito!</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">Here is your coupon: <strong>{voucher_num}</strong><br /><br /> Enter this code in your shopping cart to get your discount.</td>
+<td align="left">Ecco il tuo buono: <strong>{voucher_num}</strong><br /><br />Inserisci questo codice nel tuo carrello per ottenere lo sconto.</td>
 </tr>
 <tr>
 <td></td>
