--- a/modules/followup/mails/it/followup_3.html
+++ b/modules/followup/mails/it/followup_3.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Message from {shop_name}</title>
+	<title>Messaggio da {shop_name}</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
@@ -14,25 +14,25 @@
 <td></td>
 </tr>
 <tr>
-<td align="left">Hi <strong style="color: #db3484;">{firstname} {lastname}</strong>,</td>
+<td align="left">Salve&nbsp;<strong style="color: #db3484;">{firstname} {lastname}</strong>,</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Thanks for your trust</td>
+<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Grazie della tua fiducia</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">You are one of our best customers and as such we want to thank you for the confidence you share.<br /><br /> As appreciation for your loyalty, we want to give you a discount of {amount}% valid on your next order! This offer is valid for {days} days, so do not waste a moment!</td>
+<td align="left">Sei uno dei nostro migliori clienti e per questo vogliamo ringraziarti per la fiducia che ci accordi.<br /><br />Come apprezzamento della tua fedelt&agrave;, vogliamo offrirti uno sconto del {amount}% valido per il tuo prossimo ordine! Questa offerta &egrave; valida per {days} giorni, quindi approfittane subito!</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">Here is your coupon: <strong>{voucher_num}</strong><br /><br /> Enter this code in your shopping cart to get your discount.</td>
+<td align="left">Ecco il tuo buono: <strong>{voucher_num}</strong><br /><br />Inserisci questo codice nel tuo carrello per ottenere lo sconto.</td>
 </tr>
 <tr>
 <td></td>
