--- a/modules/mailalerts/mails/it/customer_qty.html
+++ b/modules/mailalerts/mails/it/customer_qty.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>[{shop_name}] Product available</title>
+	<title>[{shop_name}] Prodotto disponibile</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
@@ -14,13 +14,13 @@
 <td></td>
 </tr>
 <tr>
-<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">{product} is now available.</td>
+<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">{product} &egrave; ora disponibile.</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">Indeed, the item is once again in-stock.<br /><br /> You can access the product page by clicking on the link: <a href="{product_link}">{product}</a><br /><br /> You can order it right now from our on-line shop.</td>
+<td align="left">L&#039;articolo &egrave; di nuovo in magazzino.<br /><br />Puoi accedere alla pagina del prodotto cliccando sul link: <a href="{product_link}">{product}</a><br /><br />Puoi ordinarlo fin d&#039;ora dal nostro negozio online.</td>
 </tr>
 <tr>
 <td></td>
