--- a/modules/mailalerts/mails/it/productoutofstock.html
+++ b/modules/mailalerts/mails/it/productoutofstock.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>[{shop_name}] Out of stock</title>
+	<title>[{shop_name}] Prodotto esaurito</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
@@ -14,13 +14,13 @@
 <td></td>
 </tr>
 <tr>
-<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">{product} is nearly out of stock.</td>
+<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">{product} &egrave; quasi esaurito.</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">The remaining stock is now less than the specified minimum of <strong>{last_qty}</strong>.<br /><br /> <strong>Remaining stock: <span style="color: #db3484;">{qty}</span></strong><br /><br /> You are advised to open the product&#039;s admin Product Page in order to replenish your inventory.</td>
+<td align="left">La quantit&agrave; rimanente &egrave; adesso inferiore al minimo previsto di&nbsp;<strong>{last_qty}</strong>.<br /><br /> <strong>Stock rimanente: <span style="color: #db3484;">{qty}</span></strong><br /><br />Ti consigliamo di aprire la Pagina Prodotto dell&#039;admin prodotti per rifornire il tuo inventario.</td>
 </tr>
 <tr>
 <td></td>
