--- a/modules/paypal/mails/it/error_reporting.html
+++ b/modules/paypal/mails/it/error_reporting.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Message from {shop_name}</title>
+	<title>Messaggio da {shop_name}</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
@@ -14,19 +14,19 @@
 <td></td>
 </tr>
 <tr>
-<td align="left">Hi,</td>
+<td align="left">Salve,</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Error reporting from your PayPalAPI module</td>
+<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Errore dal tuo modulo PayPalAPI</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left"><strong>A client has encountered a problem with the module PayPalAPI, see the report:</strong></td>
+<td align="left"><strong>Un cliente ha avuto un problema con il modulo PayPalAPI, vedi il rapporto:</strong></td>
 </tr>
 <tr>
 <td></td>
