--- a/modules/referralprogram/mails/it/referralprogram-congratulations.html
+++ b/modules/referralprogram/mails/it/referralprogram-congratulations.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Message from {shop_name}</title>
+	<title>Messaggio da {shop_name}</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
@@ -14,25 +14,25 @@
 <td></td>
 </tr>
 <tr>
-<td align="left"><strong style="color: #8c9cc0;">Congratulations!</strong></td>
+<td align="left"><strong style="color: #8c9cc0;">Congratulazioni!</strong></td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Your sponsored friend, <strong>{sponsored_firstname} {sponsored_lastname}</strong> has placed his or her first order on <a style="color: #fff; font-size: 12px; font-weight: bold;" href="{shop_url}">{shop_name}</a>!</td>
+<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">L&#039;amico che hai presentato, <strong>{sponsored_firstname} {sponsored_lastname}</strong> ha effettuato il suo primo ordine su&nbsp;<a style="color: #fff; font-size: 12px; font-weight: bold;" href="{shop_url}">{shop_name}</a>!</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">We are pleased to offer you a voucher worth {discount_display} (voucher # {discount_name}) that you can use on your next order.</td>
+<td align="left">Siamo lieti di offrirti un buono sconto del valore di {discount_display} (voucher # {discount_name}) che potrai utilizzare sul tuo prossimo ordine.</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">Best regards,</td>
+<td align="left">Cordialmente,</td>
 </tr>
 <tr>
 <td></td>
