--- a/modules/referralprogram/mails/it/referralprogram-invitation.html
+++ b/modules/referralprogram/mails/it/referralprogram-invitation.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Message from {shop_name}</title>
+	<title>Messaggio da {shop_name}</title>
 </head>
 <body>
 	<table style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953; width: 550px;">
@@ -14,37 +14,37 @@
 <td></td>
 </tr>
 <tr>
-<td align="left"><strong style="color: #db3484;">{firstname_friend} {lastname_friend}, join us!</strong></td>
+<td align="left"><strong style="color: #db3484;">{firstname_friend} {lastname_friend}, iscriviti!</strong></td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Your friend <strong>{firstname} {lastname}</strong> wants to sponsor you on <a style="color: #fff; font-size: 12px; font-weight: bold;" href="{shop_url}">{shop_name}</a>!</td>
+<td style="background-color: #db3484; color: #fff; font-size: 12px; font-weight: bold; padding: 0.5em 1em;" align="left">Il tuo amico&nbsp;<strong>{firstname} {lastname}</strong> vuole presentarti su&nbsp;<a style="color: #fff; font-size: 12px; font-weight: bold;" href="{shop_url}">{shop_name}</a>!</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">Get sponsored and win a discount voucher of {discount}!</td>
+<td align="left">Fatti presentare e vinci un buono sconto di {discount}!</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left"><a style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953;" title="s&#039;inscrire" href="{shop_url}{link}">It&#039;s very easy to sign up. Just click here!</a></td>
+<td align="left"><a style="font-family: Verdana,sans-serif; font-size: 11px; color: #374953;" title="s&#039;inscrire" href="{shop_url}{link}">E&#039; facilissimo iscriversi. Basta cliccare qui!</a></td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">When signing up, don&#039;t forget to provide the e-mail address of your sponsoring friend: {email}.</td>
+<td align="left">Quando ti iscrivi, non dimenticare di indicare la mail dell&#039;amico/a che ti ha presentato: {email}.</td>
 </tr>
 <tr>
 <td></td>
 </tr>
 <tr>
-<td align="left">Best regards,</td>
+<td align="left">Cordialmente,</td>
 </tr>
 <tr>
 <td></td>
